# sca2

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .vulture-allowlist.py  AGENTS.md  LICENSE  README.md  go  index.html  package-lock.json  package.json  pyproject.toml  skills-lock.json  todo-eng.md  todo-science.md  todo.md
.agents/skills/: .gitignore
.agents/skills/alt-text/: SKILL.md
.agents/skills/doc-style/: SKILL.md
.agents/skills/figure-style/: SKILL.md
.agents/skills/mi-ni/: SKILL.md
.agents/skills/modal/: SKILL.md
.agents/skills/report-render/: SKILL.md  render.py
.agents/skills/science/: SKILL.md
.agents/skills/testing/: SKILL.md
.agents/skills/writing/: SKILL.md
.claude/: settings.json
.claude/agents/: experiment-doctor.md  experiment-monitor.md
.claude/hooks/: pre-push-check.sh  session-start.sh
.devcontainer/: devcontainer-lock.json  devcontainer.json  marimo.toml  post-create.sh  welcome.txt
.github/: pull_request_template.md
.github/workflows/: lint-check.yml  pr-preview.yml  publish-docs.yml  template-cleanup.yml
docs/: README.md  getting_started.py  gpt.py  index.md  report.css  subline_demo.py  themed.py
docs/.claude/: settings.local.json
docs/acts/: experiment.py
docs/ex-2.1.1/: experiment.py  report.py
docs/ex-2.9.1/: experiment.py  report.py
docs/ex-2.9.2/: experiment.py  report.py
docs/ex-2.9.3/: experiment.py  report.py
docs/ex-2.9.4/: experiment.py  report.py
docs/gpt-sweep/: experiment.py  report.py
docs/m1/ex-2.9.1/: experiment.py  report.py
docs/m1/ex-2.9.2/: experiment.py  report.py
docs/m1/ex-2.9.3/: experiment.py  report.py
docs/m1/ex-2.9.4/: experiment.py  report.py
docs/m2/ex-2.1.1/: experiment.py  report.py
docs/m2/ex-2.1.2/: experiment.py  report.py
docs/m2/ex-2.1.3/: experiment.py  (+1 more)
docs/ngpt-scaling/: experiment.py  report.py
docs/ngpt-sweep/: experiment.py  report.py
docs/pipeline/: experiment.py  report.py
docs/probe/: experiment.py  report.py
eng/: README.md  artifacts.md  decisions.md  gc.md  operations.md  publishing.md  storage-backend.md
m1/ex-2.9.1/: index.html
m1/ex-2.9.2/: index.html
m1/ex-2.9.3/: index.html
m1/ex-2.9.4/: index.html
m2/ex-2.1.1/: index.html
m2/ex-2.1.2/: index.html
m2/ex-2.1.3/: index.html
m2/ex-2.1.4/: index.html
ngpt-scaling/: index.html
pr-preview/pr-23/: md.css
pr-preview/pr-40/: md.css
pr-preview/pr-41/: index.html
pr-preview/pr-43/: report.css
pr-preview/pr-48/: index.html
pr-preview/pr-49/: index.html
pr-preview/pr-50/: index.html
pr-preview/pr-51/: index.html
pr-preview/pr-52/: index.html
pr-preview/pr-56/: index.html
pr-preview/pr-57/: index.html  report.css
references/: d0.1-concept-anchoring.md  d1.1-selective-regularization.md  d1.2-side-quests.md  d1.3-intervening-sca.md  sca1-poster.md
references/sca1-paper/: README.md  asec_additional_experiments.tex  asec_additional_results.tex  asec_architecture.tex  asec_code.tex  asec_color_similarity.tex  asec_hparam_schedules.tex  asec_intervention_lobes.tex  asec_llm_use.tex  asec_minimal_supervision.tex  asec_permanent_removal_details.tex  asec_regularizer_viz.tex  asec_related_work.tex  asec_training_data.tex  main.tex  sec_abstract.tex  sec_conclusion.tex  sec_discussion.tex  sec_interventions.tex  sec_introduction.tex  sec_sparse_concept_anchoring.tex
scripts/: auth.sh  auth_check.py  build_site.py  check.sh  clean_docs.py  deadcode.sh  export_reports.py  format.sh  install.sh  intercept_urls.py  lint.sh  preview_server.py  test.sh  typecheck.sh
scripts/hooks/: pre-commit
src/experiment/: __init__.py  config.py  utils.py
src/mini/: __init__.py  __main__.py  _debounce.py  _modal_cli.py  _queues.py  _taskworker.py  _tls.py  _watchdog.py  apparatus.py  experiment.py  gc.py  hf_store.py  lineage.py  local_apparatus.py  local_queue.py  local_volume.py  logging.py  memo.py  modal_apparatus.py  modal_queue.py  modal_volume.py  monitor.py  orchestration.py  progress.py  progress_display.py  reports.py  requirements.py  runs.py  store.py  urns.py  volume.py
src/sca/: baselines.py  colorcube.py  vis.py
src/subline/: README.md  series.py  sparkline.py  subline.py  types.py
src/utils/: param_types.py  time.py
tests/: conftest.py  test_auth_check.py  test_build_site.py  test_clean_docs.py  test_subline.py
tests/experiment/: test_colors.py  test_evaluation.py  test_models.py  test_training.py
tests/mini/: test_apparatus.py  test_budget.py  test_cli.py  test_experiments_e2e.py  test_fingerprint.py  test_gc.py  test_hf_publish_tier.py  test_hf_store.py  test_hf_store_cache.py  test_lineage.py  test_lineage_env.py  test_memo_races.py  test_monitor.py  test_orchestration.py  test_progress_display.py  test_reports.py  test_store.py  test_store_gc.py  test_urns.py  test_volume.py  test_watchdog.py
tests/sca/: test_baselines.py  test_char_names.py  test_colors.py  test_cube.py  test_evaluation.py  test_geometry.py  test_mixed_vocab.py  test_models.py  test_training.py  test_vis.py
tests/utils/: test_time.py
(+342 files in other folders)
